--- a/application.properties
+++ b/application.properties
@@ -1,2 +1,5 @@
 spring.application.name=product-service
+spring.config.import=optional:configserver:
+spring.cloud.config.discovery.enabled=true
+spring.cloud.config.discovery.serviceId=config-server
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
