--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=product-service
+spring.application.name=checkout-service
 spring.config.import=optional:configserver:
 spring.cloud.config.discovery.enabled=true
 spring.cloud.config.discovery.serviceId=config-server
