--- a/product-service.properties
+++ b/product-service.properties
@@ -1,4 +1,5 @@
 spring.application.name=product-service
+server.port=8889
 spring.config.import=optional:configserver:
 spring.cloud.config.discovery.enabled=true
 spring.cloud.config.discovery.serviceId=config-server
