--- a/product-service.properties
+++ b/product-service.properties
@@ -1,6 +1,2 @@
-spring.application.name=product-service
-server.port=8889
-spring.config.import=optional:configserver:
-spring.cloud.config.discovery.enabled=true
-spring.cloud.config.discovery.serviceId=config-server
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+server.port=0
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
